objects/Module_Version__c.object
<CustomObject><fields>
        <fullName>Academic_Year__c</fullName>
        <label>Academic Year</label>
        <picklist>
            <picklistValues>
                <fullName>2014/15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2015/16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2016/17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2017/18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2018/19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2019/20</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>As_Mandatory__c</fullName>
        <description>Programme(s) (including Year of Study) to which this module is available on a mandatory basis</description>
        <inlineHelpText>Programme(s) (including Year of Study) to which this module is available on a mandatory basis</inlineHelpText>
        <label>As Mandatory (*)</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>As_Optional__c</fullName>
        <description>Programme(s) (including Year of Study) to which this module is available on an optional basis</description>
        <inlineHelpText>Programme(s) (including Year of Study) to which this module is available on an optional basis</inlineHelpText>
        <label>As Optional (*)</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>As_Required__c</fullName>
        <description>Programme(s) (including Year of Study) to which this module is available on an required basis</description>
        <inlineHelpText>Programme(s) (including Year of Study) to which this module is available on an required basis</inlineHelpText>
        <label>As Required (*)</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Assessment_Hours__c</fullName>
        <label>Assessment Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Assessment_Notes__c</fullName>
        <label>Assessment Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Board_of_Studies__c</fullName>
        <label>Board of Studies</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Masters Board of Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tropical Disease Biology Masters Board of Studies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Humanitarian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International Public Health</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Books_For_Purchase__c</fullName>
        <label>Books For Purchase</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Check__c</fullName>
        <formula>If (  VALUE( TEXT ( Credit_Value__c ) ) * 10 =  Total_Hours__c , "Match", "DO NOT MATCH")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Shows whether the Credit Value x 10 equals total hours for all teaching methods defined for this Module</inlineHelpText>
        <label>Check</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Co_requisite_Modules__c</fullName>
        <label>Co-requisite Modules</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Count_of_Aims__c</fullName>
        <description>Hidden</description>
        <label>Count of Aims</label>
        <summaryForeignKey>Module_Aim__c.Module_Version__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Count_of_Assessment_Specs__c</fullName>
        <description>Hidden</description>
        <label>Count of Assessment Specs</label>
        <summaryForeignKey>Assessment_Specification__c.Module_Version__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Count_of_Outcomes__c</fullName>
        <label>Count of Outcomes</label>
        <summaryForeignKey>Module_Learning_Outcome__c.Module_Version__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Count_of_Skills__c</fullName>
        <label>Count of Skills</label>
        <summaryForeignKey>Module_Skill_Attribute__c.Module_Version__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Course_Template_VLE_ID_Reference__c</fullName>
        <description>Formula shows Course Template VLE ID from Master Version</description>
        <formula>if ( RecordType.Name == 'Master_Version',  Course_Template_VLE_ID__c ,  Master_Link__r.Course_Template_VLE_ID__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula shows Course Template VLE ID from Master Version</inlineHelpText>
        <label>Course Template VLE ID Reference</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Course_Template_VLE_ID__c</fullName>
        <label>Course Template VLE ID</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Credit_Level__c</fullName>
        <label>Credit Level</label>
        <picklist>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Credit_Value__c</fullName>
        <label>Credit Value</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Dependent_Modules__c</fullName>
        <description>Modules for which this is a pre-requisite</description>
        <inlineHelpText>Modules for which this is a pre-requisite</inlineHelpText>
        <label>Dependent Modules (*)</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Deputy_Module_Convenor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deputy Module Convenor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Module_Versions_Deputy</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Essential_Reading__c</fullName>
        <label>Essential Reading</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>External_Examiners__c</fullName>
        <label>External Examiners</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Fieldwork_Hours__c</fullName>
        <label>Fieldwork Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Fieldwork_Notes__c</fullName>
        <label>Fieldwork Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Further_Reading__c</fullName>
        <label>Further Reading</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>HESA_Audit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only display for Master record type</description>
        <inlineHelpText>Defines whether child instance records are carried in XML output for HESA audit - should include all MSc programmes, DTM&amp;H and DTN</inlineHelpText>
        <label>HESA Audit</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>HESA_Cost_Centre__c</fullName>
        <defaultValue>"101"</defaultValue>
        <description>For full list of cost centres - https://www.hesa.ac.uk/index.php?option=com_studrec&amp;task=show_file&amp;mnl=15051&amp;href=a^_^COSTCN.html</description>
        <inlineHelpText>Defaults to 101, as per SA/KF direction</inlineHelpText>
        <label>HESA Cost Centre</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Independent_Study_Hours__c</fullName>
        <label>Independent Study Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Independent_Study_Notes__c</fullName>
        <label>Independent Study Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>JAC_Code_Label__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Links to HESA Code object, with filter on Subject Record type 
Optional use of active flag to exclude Subjects not used
NB: '000' subjects for Programme/Course not included in HESA Module subject list</description>
        <inlineHelpText>Used for HESA XML output report</inlineHelpText>
        <label>JAC Code Label</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HESA_Code__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Subjects</value>
            </filterItems>
            <filterItems>
                <field>HESA_Code__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HESA_Code__c</referenceTo>
        <relationshipLabel>Module Versions</relationshipLabel>
        <relationshipName>Module_Versions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>JAC_Code__c</fullName>
        <formula>JAC_Code_Label__r.HESA_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>HESA Code related to subject choosen in JAC Code Label field</inlineHelpText>
        <label>JAC Code</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Laboratory_Hours__c</fullName>
        <label>Laboratory Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Laboratory_Notes__c</fullName>
        <label>Laboratory Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Lecture_Hours__c</fullName>
        <label>Lecture Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Lecture_Notes__c</fullName>
        <label>Lecture Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Master_Link__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Link</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Record must be a master</errorMessage>
            <filterItems>
                <field>Module_Version__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Master Version</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Module_Version__c</referenceTo>
        <relationshipLabel>Child Module Versions</relationshipLabel>
        <relationshipName>Child_Module_Versions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Master_Name__c</fullName>
        <label>Master Name</label>
        <length>120</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Module_Convenor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Module Convenor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Module_Versions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Module_Description__c</fullName>
        <label>Module Description</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Module_Overview__c</fullName>
        <label>Module Overview</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Module_Reference__c</fullName>
        <description>LSTM internal reference</description>
        <label>Module Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Module_Type__c</fullName>
        <label>Module Type</label>
        <picklist>
            <picklistValues>
                <fullName>MSc Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional Diploma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Course</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>[PGR Module]</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed Course</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Module_Version_Ref__c</fullName>
        <displayFormat>MV-{00000000}</displayFormat>
        <externalId>true</externalId>
        <inlineHelpText>For external integration such as to VLE</inlineHelpText>
        <label>Module Version Ref</label>
        <type>AutoNumber</type>
    </fields><fields>
        <fullName>Online_Hours__c</fullName>
        <label>Online Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Online_Notes__c</fullName>
        <label>Online Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Other_Hours__c</fullName>
        <label>Other Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Other_Notes__c</fullName>
        <label>Other Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Other_Pre_requisites__c</fullName>
        <inlineHelpText>Other pre-requisites before taking this module ie. general educational/academic requirements. Please indicate if they are additional to any pre-requisite modules listed above, or will be accepted instead of taking the pre-requisite module.</inlineHelpText>
        <label>Other Pre-requisites</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Other_Staff__c</fullName>
        <label>Other Staff</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Placement_Hours__c</fullName>
        <label>Placement Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Placement_Notes__c</fullName>
        <label>Placement Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Pre_requisite_Modules__c</fullName>
        <description>Pre-requisite modules before taking this module</description>
        <inlineHelpText>Pre-requisite modules before taking this module</inlineHelpText>
        <label>Pre-requisite Modules</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Semester__c</fullName>
        <label>Semester</label>
        <length>50</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Seminar_Hours__c</fullName>
        <label>Seminar Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Seminar_Notes__c</fullName>
        <label>Seminar Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Syllabus__c</fullName>
        <label>Syllabus</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Total_Hours__c</fullName>
        <formula>Lecture_Hours__c  +  Seminar_Hours__c  +  Tutorial_Hours__c  +  Laboratory_Hours__c  +  Fieldwork_Hours__c  +  Placement_Hours__c  +  Online_Hours__c  +  Assessment_Hours__c  +  Other_Hours__c  +  Independent_Study_Hours__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of stated hours per teaching method</inlineHelpText>
        <label>Total Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Tutorial_Hours__c</fullName>
        <label>Tutorial Hours</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Tutorial_Notes__c</fullName>
        <label>Tutorial Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Version_Name__c</fullName>
        <description>NOT NEEDED; to be deleted</description>
        <formula>IF ( Master_Link__c = Null, 
"Master - " &amp; Master_Name__c, 
Master_Link__r.Master_Name__c &amp; " - " &amp; Version_Suffix__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Version Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Version_Suffix__c</fullName>
        <label>Version Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>sfxId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>sfxId</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Module Version</label><nameField>
        <label>Module Version Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Module Versions</pluralLabel><recordTypeTrackHistory>true</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All_Pre_Approved</fullName>
        <columns>NAME</columns>
        <columns>Version_Suffix__c</columns>
        <columns>Module_Version_Ref__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Module_Version__c.Pre_Approved</value>
        </filters>
        <label>Pre-Approved Module Versions</label>
    </listViews><listViews>
        <fullName>Color_Test_Listview</fullName>
        <columns>NAME</columns>
        <columns>Version_Suffix__c</columns>
        <columns>Module_Version_Ref__c</columns>
        <columns>HESA_Cost_Centre__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Course_Template_VLE_ID__c</columns>
        <columns>Course_Template_VLE_ID_Reference__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Module_Version__c.Versions,Module_Version__c.Pre_Approved</value>
        </filters>
        <label>Color Test Listview</label>
        <sharedTo>
            <group>Color_Group</group>
        </sharedTo>
    </listViews><listViews>
        <fullName>Module_Versions_2014_15</fullName>
        <columns>NAME</columns>
        <columns>Version_Suffix__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Module_Version_Ref__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Module_Version__c.Versions</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>14/15</value>
        </filters>
        <label>Module Versions 2014/15</label>
    </listViews><listViews>
        <fullName>Module_Versions_2015_16</fullName>
        <columns>NAME</columns>
        <columns>Module_Reference__c</columns>
        <columns>Version_Suffix__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Master_Link__c</columns>
        <columns>Module_Version_Ref__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Module_Version__c.Versions</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>15/16</value>
        </filters>
        <filters>
            <field>Module_Type__c</field>
            <operation>equals</operation>
            <value>MSc Module</value>
        </filters>
        <label>Module Versions 2015/16</label>
    </listViews><listViews>
        <fullName>Module_Versions_2016_17</fullName>
        <columns>NAME</columns>
        <columns>Version_Suffix__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Module_Reference__c</columns>
        <columns>Module_Version_Ref__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Module_Version__c.Versions</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>16/17</value>
        </filters>
        <filters>
            <field>Module_Type__c</field>
            <operation>equals</operation>
            <value>MSc Module</value>
        </filters>
        <label>MSc Module Versions 2016/17</label>
    </listViews><listViews>
        <fullName>Only_Master_Records</fullName>
        <columns>RECORDTYPE</columns>
        <columns>Module_Reference__c</columns>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Course_Template_VLE_ID__c</columns>
        <columns>Module_Version_Ref__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Module_Version__c.Master_Version</value>
        </filters>
        <label>All Module Master Records</label>
    </listViews><recordTypes>
        <fullName>Master_Version</fullName>
        <active>true</active>
        <label>Master Version</label>
    </recordTypes><recordTypes>
        <fullName>Pre_Approved</fullName>
        <active>true</active>
        <label>Pre-Approved</label>
    </recordTypes><recordTypes>
        <fullName>Versions</fullName>
        <active>true</active>
        <label>Versions</label>
    </recordTypes></CustomObject>